# cs194-agent-template

./: README.md  pyproject.toml
src/: agent.py  config.py  ctf_ai_player.py  ctf_hunger_game.py  game_logger.py  server.py
