[project]
name = "agent-ctf-hungergame"
version = "0.1.0"
description = "agent that prchestrate hungergame"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
    "openai>=1.3.0",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
